# automatic_assembly_sytem

./: .gitignore  BUILD  MODULE.bazel  README.md  Read  Read_File  pom.xml  settings.gradle
app/: build.gradle
app/src/main/java/org/example/app/: App.java
app/src/test/java/org/example/app/: MessageUtilsTest.java
src/main/java/com/example/: App.java
utilities/src/main/java/org/example/utilities/: MessageUtil.java
